// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvailabilityContainer Should allow for the menu to be closed and opened 1`] = `
<div
  id="main"
>
  <SelectInput />
  <div
    id="tableCap"
  />
  <ReactTable
    AggregatedComponent={[Function]}
    ExpanderComponent={[Function]}
    FilterComponent={[Function]}
    LoadingComponent={[Function]}
    NoDataComponent={[Function]}
    PadRowComponent={[Function]}
    PaginationComponent={[Function]}
    PivotValueComponent={[Function]}
    ResizerComponent={[Function]}
    TableComponent={[Function]}
    TbodyComponent={[Function]}
    TdComponent={[Function]}
    TfootComponent={[Function]}
    ThComponent={[Function]}
    TheadComponent={[Function]}
    TrComponent={[Function]}
    TrGroupComponent={[Function]}
    aggregatedKey="_aggregated"
    className=""
    collapseOnDataChange={true}
    collapseOnPageChange={true}
    collapseOnSortingChange={true}
    column={
      Object {
        "Aggregated": undefined,
        "Cell": undefined,
        "Expander": undefined,
        "Filter": undefined,
        "Footer": undefined,
        "Header": undefined,
        "Pivot": undefined,
        "PivotValue": undefined,
        "Placeholder": undefined,
        "aggregate": undefined,
        "className": "",
        "filterAll": false,
        "filterMethod": undefined,
        "filterable": undefined,
        "footerClassName": "",
        "footerStyle": Object {},
        "getFooterProps": [Function],
        "getHeaderProps": [Function],
        "getProps": [Function],
        "headerClassName": "",
        "headerStyle": Object {},
        "minResizeWidth": 11,
        "minWidth": 100,
        "resizable": undefined,
        "show": true,
        "sortMethod": undefined,
        "sortable": undefined,
        "style": Object {},
      }
    }
    columns={
      Array [
        Object {
          "Header": "Times",
          "accessor": "times",
        },
        Object {
          "Header": "Monday",
          "accessor": "monday",
        },
        Object {
          "Header": "Tuesday",
          "accessor": "tuesday",
        },
        Object {
          "Header": "Wednesday",
          "accessor": "wednesday",
        },
        Object {
          "Header": "Thursday",
          "accessor": "thursday",
        },
        Object {
          "Header": "Friday",
          "accessor": "friday",
        },
        Object {
          "Header": "Saturday",
          "accessor": "saturday",
        },
        Object {
          "Header": "Sunday",
          "accessor": "sunday",
        },
      ]
    }
    data={
      Array [
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "8:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "9:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "10:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "11:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "12:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "13:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "14:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "15:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "16:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "17:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "18:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "19:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "20:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "21:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "22:00",
          "tuesday": null,
          "wednesday": null,
        },
      ]
    }
    defaultExpanded={Object {}}
    defaultFilterMethod={[Function]}
    defaultFiltered={Array []}
    defaultPage={0}
    defaultPageSize={20}
    defaultResized={Array []}
    defaultSortDesc={false}
    defaultSortMethod={[Function]}
    defaultSorted={Array []}
    expanderDefaults={
      Object {
        "filterable": false,
        "resizable": false,
        "sortable": false,
        "width": 35,
      }
    }
    filterable={false}
    freezeWhenExpanded={false}
    getLoadingProps={[Function]}
    getNoDataProps={[Function]}
    getPaginationProps={[Function]}
    getProps={[Function]}
    getResizerProps={[Function]}
    getTableProps={[Function]}
    getTbodyProps={[Function]}
    getTdProps={[Function]}
    getTfootProps={[Function]}
    getTfootTdProps={[Function]}
    getTfootTrProps={[Function]}
    getTheadFilterProps={[Function]}
    getTheadFilterThProps={[Function]}
    getTheadFilterTrProps={[Function]}
    getTheadGroupProps={[Function]}
    getTheadGroupThProps={[Function]}
    getTheadGroupTrProps={[Function]}
    getTheadProps={[Function]}
    getTheadThProps={[Function]}
    getTheadTrProps={[Function]}
    getTrGroupProps={[Function]}
    getTrProps={[Function]}
    groupedByPivotKey="_groupedByPivot"
    indexKey="_index"
    loading={false}
    loadingText="Loading..."
    minRows={0}
    multiSort={true}
    nestingLevelKey="_nestingLevel"
    nextText="Next"
    noDataText="No rows found"
    ofText="of"
    onFetchData={[Function]}
    originalKey="_original"
    pageJumpText="jump to page"
    pageSizeOptions={
      Array [
        5,
        10,
        20,
        25,
        50,
        100,
      ]
    }
    pageText="Page"
    pivotDefaults={Object {}}
    pivotIDKey="_pivotID"
    pivotValKey="_pivotVal"
    previousText="Previous"
    resizable={false}
    resolveData={[Function]}
    rowsSelectorText="rows per page"
    rowsText="rows"
    showPageJump={true}
    showPageSizeOptions={true}
    showPagination={false}
    showPaginationBottom={true}
    showPaginationTop={false}
    sortable={false}
    style={Object {}}
    subRowsKey="_subRows"
  />
  <div
    className="bottom"
    id="option-container"
  >
    <Link
      replace={false}
      to="/"
    >
      <button
        id="save"
        type="button"
      >
        Save
      </button>
    </Link>
    <Link
      refresh="true"
      replace={false}
      to="/availability"
    >
      <button
        type="reset"
      >
        Reset
      </button>
    </Link>
    <button
      onClick={[Function]}
    >
      Additional Options
    </button>
  </div>
</div>
`;

exports[`AvailabilityContainer Should allow for the menu to be closed and opened 2`] = `
<div
  id="main"
>
  <SelectInput />
  <div
    id="tableCap"
  />
  <ReactTable
    AggregatedComponent={[Function]}
    ExpanderComponent={[Function]}
    FilterComponent={[Function]}
    LoadingComponent={[Function]}
    NoDataComponent={[Function]}
    PadRowComponent={[Function]}
    PaginationComponent={[Function]}
    PivotValueComponent={[Function]}
    ResizerComponent={[Function]}
    TableComponent={[Function]}
    TbodyComponent={[Function]}
    TdComponent={[Function]}
    TfootComponent={[Function]}
    ThComponent={[Function]}
    TheadComponent={[Function]}
    TrComponent={[Function]}
    TrGroupComponent={[Function]}
    aggregatedKey="_aggregated"
    className=""
    collapseOnDataChange={true}
    collapseOnPageChange={true}
    collapseOnSortingChange={true}
    column={
      Object {
        "Aggregated": undefined,
        "Cell": undefined,
        "Expander": undefined,
        "Filter": undefined,
        "Footer": undefined,
        "Header": undefined,
        "Pivot": undefined,
        "PivotValue": undefined,
        "Placeholder": undefined,
        "aggregate": undefined,
        "className": "",
        "filterAll": false,
        "filterMethod": undefined,
        "filterable": undefined,
        "footerClassName": "",
        "footerStyle": Object {},
        "getFooterProps": [Function],
        "getHeaderProps": [Function],
        "getProps": [Function],
        "headerClassName": "",
        "headerStyle": Object {},
        "minResizeWidth": 11,
        "minWidth": 100,
        "resizable": undefined,
        "show": true,
        "sortMethod": undefined,
        "sortable": undefined,
        "style": Object {},
      }
    }
    columns={
      Array [
        Object {
          "Header": "Times",
          "accessor": "times",
        },
        Object {
          "Header": "Monday",
          "accessor": "monday",
        },
        Object {
          "Header": "Tuesday",
          "accessor": "tuesday",
        },
        Object {
          "Header": "Wednesday",
          "accessor": "wednesday",
        },
        Object {
          "Header": "Thursday",
          "accessor": "thursday",
        },
        Object {
          "Header": "Friday",
          "accessor": "friday",
        },
        Object {
          "Header": "Saturday",
          "accessor": "saturday",
        },
        Object {
          "Header": "Sunday",
          "accessor": "sunday",
        },
      ]
    }
    data={
      Array [
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "8:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "9:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "10:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "11:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "12:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "13:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "14:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "15:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "16:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "17:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "18:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "19:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "20:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "21:00",
          "tuesday": null,
          "wednesday": null,
        },
        Object {
          "friday": null,
          "monday": null,
          "saturday": null,
          "sunday": null,
          "thursday": null,
          "times": "22:00",
          "tuesday": null,
          "wednesday": null,
        },
      ]
    }
    defaultExpanded={Object {}}
    defaultFilterMethod={[Function]}
    defaultFiltered={Array []}
    defaultPage={0}
    defaultPageSize={20}
    defaultResized={Array []}
    defaultSortDesc={false}
    defaultSortMethod={[Function]}
    defaultSorted={Array []}
    expanderDefaults={
      Object {
        "filterable": false,
        "resizable": false,
        "sortable": false,
        "width": 35,
      }
    }
    filterable={false}
    freezeWhenExpanded={false}
    getLoadingProps={[Function]}
    getNoDataProps={[Function]}
    getPaginationProps={[Function]}
    getProps={[Function]}
    getResizerProps={[Function]}
    getTableProps={[Function]}
    getTbodyProps={[Function]}
    getTdProps={[Function]}
    getTfootProps={[Function]}
    getTfootTdProps={[Function]}
    getTfootTrProps={[Function]}
    getTheadFilterProps={[Function]}
    getTheadFilterThProps={[Function]}
    getTheadFilterTrProps={[Function]}
    getTheadGroupProps={[Function]}
    getTheadGroupThProps={[Function]}
    getTheadGroupTrProps={[Function]}
    getTheadProps={[Function]}
    getTheadThProps={[Function]}
    getTheadTrProps={[Function]}
    getTrGroupProps={[Function]}
    getTrProps={[Function]}
    groupedByPivotKey="_groupedByPivot"
    indexKey="_index"
    loading={false}
    loadingText="Loading..."
    minRows={0}
    multiSort={true}
    nestingLevelKey="_nestingLevel"
    nextText="Next"
    noDataText="No rows found"
    ofText="of"
    onFetchData={[Function]}
    originalKey="_original"
    pageJumpText="jump to page"
    pageSizeOptions={
      Array [
        5,
        10,
        20,
        25,
        50,
        100,
      ]
    }
    pageText="Page"
    pivotDefaults={Object {}}
    pivotIDKey="_pivotID"
    pivotValKey="_pivotVal"
    previousText="Previous"
    resizable={false}
    resolveData={[Function]}
    rowsSelectorText="rows per page"
    rowsText="rows"
    showPageJump={true}
    showPageSizeOptions={true}
    showPagination={false}
    showPaginationBottom={true}
    showPaginationTop={false}
    sortable={false}
    style={Object {}}
    subRowsKey="_subRows"
  />
  <div
    className="bottom"
    id="option-container"
  >
    <Link
      replace={false}
      to="/"
    >
      <button
        id="save"
        type="button"
      >
        Save
      </button>
    </Link>
    <Link
      refresh="true"
      replace={false}
      to="/availability"
    >
      <button
        type="reset"
      >
        Reset
      </button>
    </Link>
    <button
      onClick={[Function]}
    >
      Additional Options
    </button>
  </div>
</div>
`;

exports[`AvailabilityContainer Should render correctly with a menu 1`] = `
<div
  id="main"
>
  <div
    id="greetingText"
  >
    Select your unavailability over a typical school week.
  </div>
  <div
    id="tableCap"
  />
  <div
    class="ReactTable"
  >
    <div
      class="rt-table"
      role="grid"
    >
      <div
        class="rt-thead -header"
        style="min-width:800px"
      >
        <div
          class="rt-tr"
          role="row"
        >
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Times
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Monday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Tuesday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Wednesday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Thursday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Friday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Saturday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Sunday
            </div>
          </div>
        </div>
      </div>
      <div
        class="rt-tbody"
        style="min-width:800px"
      >
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              8:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              9:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              10:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              11:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              12:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              13:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              14:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              15:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              16:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              17:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              18:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              19:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              20:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              21:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              22:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="-loading"
    >
      <div
        class="-loading-inner"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="bottom"
    id="option-container"
  >
    <a
      href="#/"
    >
      <button
        id="save"
        type="button"
      >
        Save
      </button>
    </a>
    <a
      href="#/availability"
      refresh="true"
    >
      <button
        type="reset"
      >
        Reset
      </button>
    </a>
    <button>
      Additional Options
    </button>
    <div
      class="menu"
    >
      <span
        id="credit"
      >
        <div
          class="inputHeader"
        >
          Max Credit Amount
        </div>
        <input
          data-populated="false"
          placeholder="Enter Max Credit Value"
          type="number"
        />
        <button
          form="main"
          id="creditButton"
          type="creditSave"
        >
          Save
        </button>
      </span>
      <span
        id="blacklist"
      >
        <div
          class="inputHeader"
        >
          Professor Blacklist
        </div>
        <input
          id="profBlacklist"
          placeholder="Enter Professor Name"
          type="text"
        />
        <button
          form="main"
          id="profButton"
          type="profSave"
        >
          Save
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`AvailabilityContainer Should render correctly without a menu 1`] = `
<div
  id="main"
>
  <div
    id="greetingText"
  >
    Select your unavailability over a typical school week.
  </div>
  <div
    id="tableCap"
  />
  <div
    class="ReactTable"
  >
    <div
      class="rt-table"
      role="grid"
    >
      <div
        class="rt-thead -header"
        style="min-width:800px"
      >
        <div
          class="rt-tr"
          role="row"
        >
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Times
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Monday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Tuesday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Wednesday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Thursday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Friday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Saturday
            </div>
          </div>
          <div
            class="rt-th"
            role="columnheader"
            style="flex:100 0 auto;width:100px"
            tabindex="-1"
          >
            <div
              class=""
            >
              Sunday
            </div>
          </div>
        </div>
      </div>
      <div
        class="rt-tbody"
        style="min-width:800px"
      >
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              8:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              9:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              10:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              11:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              12:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              13:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              14:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              15:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              16:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              17:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              18:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              19:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              20:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -even"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              21:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
        <div
          class="rt-tr-group"
          role="rowgroup"
        >
          <div
            class="rt-tr -odd"
            role="row"
            style="background:white;color:black"
          >
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            >
              22:00
            </div>
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
            <div
              class="rt-td"
              role="gridcell"
              style="flex:100 0 auto;width:100px"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="-loading"
    >
      <div
        class="-loading-inner"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="bottom"
    id="option-container"
  >
    <a
      href="#/"
    >
      <button
        id="save"
        type="button"
      >
        Save
      </button>
    </a>
    <a
      href="#/availability"
      refresh="true"
    >
      <button
        type="reset"
      >
        Reset
      </button>
    </a>
    <button>
      Additional Options
    </button>
  </div>
</div>
`;

exports[`SelectInput Should render correctly 1`] = `
<div
  id="greetingText"
>
  Select your unavailability over a typical school week.
</div>
`;
